--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -7,8 +7,11 @@
 .ichiban-ichiba__footer__lgblk{
     @apply basis-1/4 relative w-full min-h-[1px] px-4 box-border block;
 }
+.ichiban-ichiba__footer__smblk-first{
+    @apply basis-1/6 relative w-full min-h-[1px] px-4 box-border block;
+}
 .ichiban-ichiba__footer__smblk{
-    @apply basis-1/6;
+    @apply basis-1/6 relative w-full min-h-[1px] px-4 box-border block;
 }
 .ichiban-ichiba__footer__lgblk__company-info{
     @apply pb-4
@@ -28,8 +31,11 @@
 .ichiban-ichiba__footer__lgblk__payment{
     @apply box-border;
 }
+.ichiban-ichiba__footer__lgblk__payment img{
+    @apply inline-block mr-3.5 max-w-full align-middle border-none;
+}
 .ichiban-ichiba__footer__smblk__head{
-    @apply box-border block mb-5 leading-7 text-lg font-medium;
+    @apply box-border block mb-5 leading-7 text-lg font-medium text-[#191919];
 }
 .ichiban-ichiba__footer__smblk__items{
     @apply box-border block leading-[26px];
@@ -37,18 +43,48 @@
 .ichiban-ichiba__footer__smblk__items ul{
     @apply m-0 p-0 list-none;
 }
-.ichiban-ichiba__footer__smblk__items li{
-    @apply hover:text-red-500;
-}
 .ichiban-ichiba__footer__smblk__items a{
-    @apply mb-2 inline-block text-[#4c4c4c];
+    @apply mb-2 inline-block text-[#4c4c4c] hover:text-red-500;
 }
 .ichiban-ichiba__footer__lgblk__subscribe-form{
-    @apply box-border block
+    @apply box-border block;
+}
+.ichiban-ichiba__footer__lgblk__subscribe-form h3{
+    @apply font-light text-3xl text-[#252525] mb-2;
+}
+.ichiban-ichiba__footer__lgblk__subscribe-form strong{
+    @apply font-medium
+}
+.ichiban-ichiba__footer__lgblk__subscribe-form p{
+    @apply mb-5;
 }
 .ichiban-ichiba__footer__lgblk__subscribe-form input{
-    @apply h-[40px] border-0 pl-[15px] float-left rounded-l-[20px] w-4/6 bg-slate-300;
+    @apply h-10 border-0 pl-4 float-left rounded-l-3xl w-4/6 bg-slate-300 ;
 }
 .ichiban-ichiba__footer__lgblk__subscribe-form button{
-    @apply w-2/6 bg-red-500 text-[13px] text-white font-medium uppercase rounded-r-[20px] cursor-pointer transition-[0.3s] h-[40px] hover:bg-red-800 border-0;
+    @apply w-2/6 bg-red-500 text-[13px] text-white font-medium uppercase rounded-r-3xl cursor-pointer transition-[0.3s] h-[40px] hover:bg-red-800 border-0;
+}
+.ichiban-ichiba__footer__lgblk__in-touch{
+    @apply mt-9;
+}
+.ichiban-ichiba__footer__lgblk__in-touch strong{
+    @apply mr-5 text-[#191919] uppercase font-medium;
+}
+
+@media screen and (max-width: 1020px){
+    .ichiban-ichiba__footer__lgblk{
+        @apply basis-1/2 relative w-full min-h-[1px] px-4 box-border block mb-2;
+    }
+    .ichiban-ichiba__footer__smblk-first{
+        @apply basis-1/2 relative w-full min-h-[1px] px-4 box-border block mb-2;
+    }
+    .ichiban-ichiba__footer__smblk{
+        @apply basis-1/4 relative w-full min-h-[1px] px-4 box-border block mb-2;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .ichiban-ichiba__footer__lgblk, .ichiban-ichiba__footer__smblk, .ichiban-ichiba__footer__smblk-first{
+        @apply basis-full relative w-full min-h-[1px] px-4 box-border block mb-3;
+    }
 }
