--- a/src/components/Sidebar/Latestitems/styles.css
+++ b/src/components/Sidebar/Latestitems/styles.css
@@ -4,7 +4,7 @@
 .ichiban-ichiba__sidebar__latest-items__layout{
     @apply my-7;
 }
-h3{
+.ichiban-ichiba__sidebar__latest-items__layout h3{
     @apply text-lg font-medium text-[#191919] border-b border-[#ebebeb] pb-2 mb-0 relative z-[-1] bottom-[-2px] 
     before:bg-[#e23e1d] before:h-[3px] before:w-[70px] before:absolute before:bottom-0 before:left-0 before:mb-[-1px];
 }
