--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -88,7 +88,7 @@
 }
 
 .ichiban-ichiba__navbar__order {
-    @apply flex items-center ;
+    @apply flex items-center relative;
 }
 
 .ichiban-ichiba__navbar__mobile-order{
