--- a/src/components/mini-components/ShoppingCartOptions/styles.css
+++ b/src/components/mini-components/ShoppingCartOptions/styles.css
@@ -41,5 +41,17 @@
     @apply w-48 border-2 rounded-full border-solid border-[#ebebeb] text-[#232530] h-10 uppercase text-center inline-block leading-9 hover:bg-red-500 hover:text-[#ebebeb] hover:border-0;
 }
 .ichiban-ichiba__shopping-cart-options__discount-code{
-    @apply basis-1/3;
+    @apply basis-1/3 text-center border border-solid border-[#ebebeb] overflow-hidden;
+}
+.ichiban-ichiba__shopping-cart-options__discount-code__heading{
+    @apply overflow-hidden;
+}
+.ichiban-ichiba__shopping-cart-options__discount-code__inner{
+    @apply p-5;
+}
+.ichiban-ichiba__shopping-cart-options__discount-code__inner p{
+    @apply mt-0 mb-[1rem] text-center;
+}
+.ichiban-ichiba__shopping-cart-options__discount-code__inner input{
+    @apply border-0 border-b border-solid border-[#ebebeb] w-1/2 mr-5 overflow-visible;
 }
